[gd_scene load_steps=3 format=3 uid="uid://dq7y8m3bptjx"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_main_menu"]
[ext_resource type="Theme" uid="uid://b3klx57slj0l3" path="res://assets/themes/soft_retro/soft_retro.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MainTitle" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 120
text = "Ti·∫øn L√™n"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 60
text = "Thirteen"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LocalGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 56
text = "üéÆ Local Game"

[node name="OnlineGameButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 56
text = "üåê Online Game"

[node name="NetworkTestButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 40
text = "üîß Network Test"

[node name="AboutButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 56
text = "‚ÑπÔ∏è About"

[node name="AboutPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="AboutPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.15, 0.18, 1)

[node name="MarginContainer" type="MarginContainer" parent="AboutPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AboutTitle" type="Label" parent="AboutPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "About Ti·∫øn L√™n"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="AboutPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]A Vietnamese shedding-type card game, also known as Thirteen or Vietnamese Poker.

[b]How to Play:[/b]
‚Ä¢ 4 players, 13 cards each
‚Ä¢ Play cards higher than previous play
‚Ä¢ First to shed all cards wins
‚Ä¢ 2 is the highest card

[b]Features:[/b]
‚Ä¢ Single-player vs. 3 bots
‚Ä¢ Online multiplayer (coming soon)
‚Ä¢ Tournament mode with scoring[/center]"
fit_content = true
scroll_active = false

[node name="GitHubButton" type="Button" parent="AboutPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "üìÇ View on GitHub"

[node name="CloseButton" type="Button" parent="AboutPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Close"
